almost done with registration of new business section

--- a/public/buku_ui/src/index.css
+++ b/public/buku_ui/src/index.css
@@ -25,6 +25,8 @@ input:focus {
 }
 body {
   background-color: #cfd7df;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 header {
   flex-direction: row;
