--- a/public/buku_ui/src/index.css
+++ b/public/buku_ui/src/index.css
@@ -248,3 +248,155 @@ footer{
   padding-bottom: 30px;
   background-color: #212c2c;
 }
+.register-business-section-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: calc(100% - 20px);
+}
+.register-business-section-content .first-section{
+  padding: 0 10px;
+}
+.register-business-each-section-content{
+  width: 50%
+}
+.register-business-each-section-content-inner{
+  margin-top: 20px;
+  width: 100%;
+  box-shadow: 1px 2px 3px rgba(0,0,0,0.3);
+  border-top-left-radius: 80px;
+  border-bottom-right-radius: 80px;
+  background-color: #212c2c;
+}
+.register-business-each-section-content-first-inner{
+  margin-top: 20px;
+  padding: 20px 10px;
+  border-radius: 0;
+  border-top-left-radius: 80px;
+  border-bottom-right-radius: 80px;
+}
+.register-business-each-section-content-first-inner-flex{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.register-business-each-section-content-first-inner-flex-each{
+  width: 50%;
+  max-width: 400px; 
+  margin-right: 5px;
+}
+.register-business-each-section-content-first-inner-flex-each-second{
+  margin-right: 0;
+}
+.choose-buku-bottom-flex{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#home-page-news-list{
+  margin: 30px 40px;
+  margin-top: 20px;
+}
+.each-homepage-news-item{
+  display: flex !important;
+  flex-direction: row;
+  background-color: #212c2c;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.each-homepage-news-item-each-inner-section{
+  width: 50%;
+}
+.each-homepage-news-item-each-inner-section-img{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url('./images/11.jpg');
+  height: 100%;
+  min-height: 350px;
+  border-radius: 50px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-left: 10px solid orange;
+}
+.each-homepage-news-item-each-inner-section-info{
+  padding: 20px;
+  border-right: 10px solid orange;
+  min-height: 370px
+}
+
+.search-results-page-content-container{
+  display: flex; 
+  flex-direction: row !important;
+  justify-content: space-between; 
+  padding: 0 10px;
+}
+
+@media only screen and (max-width: 700px){
+  .header-main-nav{
+    display: none;
+  }
+  .header-menu-new-button{
+    display: none;
+  }
+  .dontShowMobile{
+    display: none;
+  }
+  .about-buku-section{
+    display: block;
+  }
+  .eachCSecFlex{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .register-business-section-content{
+    display: block;
+    width: 100%;
+  }
+  .register-business-each-section-content{
+    width: 100%;
+    margin: 0;
+  }
+  .register-business-section-content .first-section{
+    padding: 0;
+  }
+  .register-business-each-section-content-inner{
+    border-radius: 0;
+    margin-bottom: 20px;
+  }
+  .register-business-each-section-content-first-inner-flex{
+    display: block;
+  }
+  .register-business-each-section-content-first-inner-flex-each{
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .choose-buku-bottom-flex{
+    margin-top: 0;
+    display: block;
+  }
+  #home-page-news-list{
+    
+  }
+  .each-homepage-news-item{
+    display: block !important;
+  }
+  .each-homepage-news-item-each-inner-section{
+    width: 100%;
+  }
+  .each-homepage-news-item-each-inner-section-img{
+    border-radius: 0;
+    margin: 0;
+  }
+  .each-homepage-news-item-each-inner-section-info{
+    border: none;
+    border-bottom: 10px solid orange;
+    min-height: 370px
+  }
+  footer{
+    display: none;
+  }
+}
