--- a/public/buku_ui/src/index.css
+++ b/public/buku_ui/src/index.css
@@ -33,16 +33,16 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  padding: 5px 0;
   width: 100%;
-  height: 60px;
   background-color: #212c2c;
   z-index: 110;
 }
-footer{
+footer {
   background-color: #212c2c;
   min-height: 200px;
 }
-.logo{
+.logo {
   font-family: Impact;
   letter-spacing: 1px;
   color: white;
@@ -50,60 +50,105 @@ footer{
   /*border-bottom: 3px solid rgb(255, 110, 25);
   border-top: 3px solid rgb(255, 110, 25);*/
 }
-.logosB{
+.logosB {
   font-family: Impact;
-  color:rgb(255, 110, 25) !important;
+  color: rgb(255, 110, 25) !important;
   font-size: 30px !important;
   font-weight: initial !important;
 }
-.logo span{
+.logo span {
   font-size: 16px;
-  color:rgb(255, 188, 149);
+  color: rgb(255, 188, 149);
   font-weight: bolder;
 }
-.header-wrapper{
+.header-wrapper {
   display: flex;
   justify-content: space-between;
-  height: 100%;
   padding: 0 20px;
   max-width: 1600px;
   margin: auto;
 }
-.wrapper{
+.wrapper {
   max-width: 1600px;
   margin: auto;
 }
-.each-header-section{
+.each-header-section {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.header-main-nav ul li{
+.header-main-nav {
+  padding-top: 10px;
+}
+.header-main-nav ul li {
   display: inline;
   margin-left: 20px;
   list-style-type: none;
   text-decoration: none;
-  color: white; 
+  color: white;
   font-weight: bolder;
   font-size: 13px;
   letter-spacing: 1px;
+  cursor: pointer;
 }
-.header-main-nav ul li i{
-  color:rgb(87, 221, 255);
+.header-main-nav ul li i {
+  color: rgb(87, 221, 255);
   margin-right: 5px;
   font-size: 15px;
 }
-.header-main-nav ul li.active i{
-  color:rgb(255, 110, 25);
+.header-main-nav ul li:hover i {
+  color: rgb(255, 110, 25);
 }
-.header-main-nav ul li.active{
-  color:rgb(255, 188, 149);
+.header-main-nav ul li:hover {
+  color: rgb(255, 188, 149);
+}
+.header-main-nav ul li.active i {
+  color: rgb(255, 110, 25);
+}
+.header-main-nav ul li.active {
+  color: rgb(255, 188, 149) !important;
+}
+.header-search-section {
+  width: 50%;
+}
+.search-container {
+  width: 100%;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.search-input {
+  padding: 10px;
+  border-radius: 0;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border: none;
+  font-size: 14px;
+  width: calc(100% - 100px);
+}
+.search-button {
+  font-size: 14px;
+  padding: 10px;
+  font-weight: bolder;
+  border: none;
+  border-radius: 0;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: white;
+  color: red;
+  text-align: center;
+  letter-spacing: 1px;
+  width: 100px;
+}
+.search-button span {
+  font-size: 14px;
 }
 .hero-section {
-  padding-top: 60px;
+  padding-top: 90px;
   width: 100vw;
   min-height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 .hero-section-inner {
   background-color: #212c2c;
@@ -126,7 +171,7 @@ footer{
   text-align: center;
   font-size: 19px;
   font-family: serif;
-  font-family: 'Courgette';
+  font-family: "Courgette";
   padding: 10px 0;
 }
 .site-news-section {
@@ -148,12 +193,13 @@ footer{
   width: 40px;
   height: 40px;
 }
-.each-popular-service .img-p{
+.each-popular-service .img-p {
   text-align: center;
 }
-.each-popular-service .name-p{
+.each-popular-service .name-p {
   text-align: center;
-  color: #ccc; font-size: 12px;
+  color: #ccc;
+  font-size: 12px;
 }
 .homepage-favorite-services-list {
   width: 85%;
@@ -233,85 +279,86 @@ footer{
   color: #ccc;
   margin-top: -3px;
 }
-.about-buku-section{
+.about-buku-section {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 20px;
 }
-.eachCSecFlex{
+.eachCSecFlex {
   width: 33%;
   text-align: center;
 }
-.search-results-page{
-  padding-top: 80px;
+.search-results-page {
+  padding-top: 100px;
   padding-bottom: 30px;
   background-color: #212c2c;
+  min-height: calc(100vh - 200px);
 }
-.register-business-section-content{
+.register-business-section-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: calc(100% - 20px);
 }
-.register-business-section-content .first-section{
+.register-business-section-content .first-section {
   padding: 0 10px;
 }
-.register-business-each-section-content{
-  width: 50%
+.register-business-each-section-content {
+  width: 50%;
 }
-.register-business-each-section-content-inner{
+.register-business-each-section-content-inner {
   margin-top: 20px;
   width: 100%;
-  box-shadow: 1px 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
   border-top-left-radius: 80px;
   border-bottom-right-radius: 80px;
   background-color: #212c2c;
 }
-.register-business-each-section-content-first-inner{
+.register-business-each-section-content-first-inner {
   margin-top: 20px;
   padding: 20px 10px;
   border-radius: 0;
   border-top-left-radius: 80px;
   border-bottom-right-radius: 80px;
 }
-.register-business-each-section-content-first-inner-flex{
+.register-business-each-section-content-first-inner-flex {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.register-business-each-section-content-first-inner-flex-each{
+.register-business-each-section-content-first-inner-flex-each {
   width: 50%;
-  max-width: 400px; 
+  max-width: 400px;
   margin-right: 5px;
 }
-.register-business-each-section-content-first-inner-flex-each-second{
+.register-business-each-section-content-first-inner-flex-each-second {
   margin-right: 0;
 }
-.choose-buku-bottom-flex{
+.choose-buku-bottom-flex {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-#home-page-news-list{
+#home-page-news-list {
   margin: 30px 40px;
   margin-top: 20px;
 }
-.each-homepage-news-item{
+.each-homepage-news-item {
   display: flex !important;
   flex-direction: row;
   background-color: #212c2c;
   border-radius: 10px;
   overflow: hidden;
 }
-.each-homepage-news-item-each-inner-section{
+.each-homepage-news-item-each-inner-section {
   width: 50%;
 }
-.each-homepage-news-item-each-inner-section-img{
+.each-homepage-news-item-each-inner-section-img {
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url('./images/11.jpg');
+  background-image: url("./images/11.jpg");
   height: 100%;
   min-height: 350px;
   border-radius: 50px;
@@ -321,82 +368,414 @@ footer{
   margin-bottom: 10px;
   border-left: 10px solid orange;
 }
-.each-homepage-news-item-each-inner-section-info{
+.each-homepage-news-item-each-inner-section-info {
   padding: 20px;
   border-right: 10px solid orange;
-  min-height: 370px
+  min-height: 370px;
 }
+.footer-items-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 40px 10px;
+}
+.footer-content-section {
+  width: 33.3%;
+}
+#search-filter-by-services-list {
+  position: absolute;
+  height: calc(100vh - 200px);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  overflow: hidden;
+  display: none;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  padding-bottom: 45px;
+  background-color: white;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.4);
+  border-top: 4px solid orange;
+}
+.search-filters-include-services {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  overflow-y: auto;
+  height: 100%;
+}
+#filtered_search_submit_button {
+  position: absolute;
+  bottom: 0;
+  padding: 5px;
+  width: 100%;
+  background-color: white;
+}
+.search-filters-include-services-each-section {
+  width: calc(50% - 5px);
+}
+@keyframes display-anim {
+  from {
+    margin-top: 100px;
+    opacity: 0;
+    /*height: 100%;*/
+  }
 
-.search-results-page-content-container{
-  display: flex; 
+  to {
+    margin-top: 0;
+    opacity: 1;
+    /*height: 100%;*/
+  }
+}
+.search-filters-include-services {
+  animation-name: display-anim;
+  animation-duration: 0.3s;
+}
+.search-results-page-content-container {
+  display: flex;
   flex-direction: row !important;
-  justify-content: space-between; 
+  justify-content: space-between;
   padding: 0 10px;
 }
-
-@media only screen and (max-width: 700px){
-  .header-main-nav{
+.search-results-list {
+  width: 75%;
+}
+.search-results-right-section {
+  width: calc(25% - 5px);
+  background-color: rgba(0, 0, 0, 0.2);
+  min-height: 200px;
+  border-radius: 4px;
+  margin-bottom: 5px;
+}
+.search-results-list-each-item {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin-bottom: 5px;
+  overflow: hidden;
+  display: flex;
+  border-left: 7px solid #ffe96b;
+}
+.search-results-list-each-item-left-section {
+  margin-right: 10px;
+  background: none;
+  box-shadow: none;
+  width: 35%;
+  margin: 0;
+  border-radius: 0;
+  padding-right: 0;
+  padding-bottom: 10px;
+  border-top: none;
+  height: 100%;
+}
+.each-search-result-spots-section {
+  width: 65%;
+}
+.search-results-each-time-spot {
+  margin-right: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+  padding: 10px;
+  width: calc(33% - 4.4px);
+}
+#register_business_pane {
+  position: fixed;
+  background-color: #212c2c;
+  z-index: 1;
+  top: 90px;
+  overflow-y: auto;
+  height: calc(100vh - 90px);
+  width: 100%;
+}
+#all_services_menu_pane {
+  position: fixed;
+  background-color: #212c2c;
+  z-index: 4;
+  top: 90px;
+  overflow-y: auto;
+  height: calc(100vh - 90px);
+  width: 100%;
+  overflow-y: auto;
+}
+#notifications_container,
+#app_settings_page,
+#edit_user_profile_page {
+  position: fixed;
+  background-color: #212c2c;
+  z-index: 4;
+  top: 90px;
+  overflow-y: auto;
+  height: calc(100vh - 90px);
+  width: 100%;
+  overflow-y: auto;
+}
+.all_service_each_category_item {
+  height: 120px;
+  width: calc(25% - 3px);
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 0, 0.1);
+  margin-bottom: 4px;
+  background: rgba(255, 255, 0, 0.1);
+  cursor: pointer;
+}
+.all_service_each_category_item:hover {
+  background-color: rgba(84, 0, 192);
+}
+#mobile_bottom_nav {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  background-color: rgb(32, 45, 56);
+  height: 55px;
+  width: 100%;
+  border-top: 1px solid rgba(255, 166, 0, 0.452);
+}
+#mobile_bottom_nav div.active p {
+  color: skyblue !important;
+}
+#mobile_bottom_nav div.active i {
+  color: turquoise !important;
+}
+#appointments_list_container {
+  padding-top: 80px;
+  min-height: 500px;
+  background-color: #212c2c;
+}
+#user_account_page {
+  padding-top: 100px;
+  min-height: 500px;
+  background-color: #212c2c;
+}
+.user-account-page-main-container {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: space-between;
+  max-width: 1300px;
+  margin: auto;
+}
+.user-account-page-main-sections-each {
+  width: calc(50% - 2px);
+}
+#hero_section_svg_bg {
+  z-index: 0;
+  opacity: 0.1;
+  background-image: url("./images/CalendarBg.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 340px;
+  height: 391.5px;
+  position: absolute;
+  top: 100px;
+  right: 70px;
+  transform: rotate(25deg);
+}
+.booking_workflow_steps_indicator {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: space-between;
+  padding: 0 10px;
+  margin: 15px 0;
+}
+.booking_workflow_steps_each_indicator {
+  border-bottom: 4px solid rgba(255, 255, 255, 0.4);
+  position: relative;
+  height: 50px;
+  margin-bottom: 10px;
+}
+.booking_workflow_steps_each_indicator_number {
+  border-radius: 100%;
+  font-weight: bolder;
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(255, 255, 255, 0.4);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  background-color: rgb(95, 0, 95);
+  color: white;
+}
+.booking_workflow_steps_each_indicator .active{
+  transition: all 0.5s;
+  border: 4px solid orange;
+  color: orange;
+}
+.booking_workflow_steps_indicator .active {
+  transition: all 0.5s;
+  border-bottom: 4px solid orange;
+}
+.workflow_last_step_number{
+  border-radius: 100%;
+  font-weight: bolder;
+  width: 30px;
+  height: 30px;
+  border: 4px solid rgba(255,255,255,0.4);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -15px;
+  right: 0;
+  background-color: rgb(95,95,0);
+  color: white;
+}
+@media only screen and (max-width: 700px) {
+  body {
+    /*background-color: #212c2c;*/
+  }
+  .header-main-nav {
     display: none;
   }
-  .header-menu-new-button{
+  .header-menu-new-button {
     display: none;
   }
-  .dontShowMobile{
+  #hero_section_svg_bg {
+    width: 100vw;
+    right: 20px;
+  }
+  .logos-dotcom {
     display: none;
   }
-  .about-buku-section{
+  .header-search-section {
+    width: 77%;
+  }
+  .search-input {
+    width: calc(100% - 50px);
+  }
+  .search-button {
+    width: 50px;
+  }
+  .search-button span {
+    display: none;
+  }
+  .dontShowMobile {
+    display: none;
+  }
+  .about-buku-section {
     display: block;
   }
-  .eachCSecFlex{
+  .eachCSecFlex {
     width: 100%;
     margin-bottom: 20px;
   }
-  .register-business-section-content{
+  .register-business-section-content {
     display: block;
     width: 100%;
   }
-  .register-business-each-section-content{
+  .register-business-each-section-content {
     width: 100%;
     margin: 0;
   }
-  .register-business-section-content .first-section{
+  .register-business-section-content .first-section {
     padding: 0;
   }
-  .register-business-each-section-content-inner{
+  .register-business-each-section-content-inner {
     border-radius: 0;
     margin-bottom: 20px;
   }
-  .register-business-each-section-content-first-inner-flex{
+  .register-business-each-section-content-first-inner-flex {
     display: block;
   }
-  .register-business-each-section-content-first-inner-flex-each{
+  .register-business-each-section-content-first-inner-flex-each {
     width: 100%;
     margin-right: 0;
     margin-bottom: 10px;
   }
-  .choose-buku-bottom-flex{
+  .choose-buku-bottom-flex {
     margin-top: 0;
     display: block;
   }
-  #home-page-news-list{
-    
+  #home-page-news-list {
   }
-  .each-homepage-news-item{
+  .each-homepage-news-item {
     display: block !important;
   }
-  .each-homepage-news-item-each-inner-section{
+  .each-homepage-news-item-each-inner-section {
     width: 100%;
   }
-  .each-homepage-news-item-each-inner-section-img{
+  .each-homepage-news-item-each-inner-section-img {
     border-radius: 0;
+    min-height: 200px;
     margin: 0;
   }
-  .each-homepage-news-item-each-inner-section-info{
+  .each-homepage-news-item-each-inner-section-info {
     border: none;
     border-bottom: 10px solid orange;
-    min-height: 370px
+    min-height: 370px;
   }
-  footer{
-    display: none;
+  .search-filters-include-services {
+    display: block;
+  }
+  #search-filter-by-services-list {
+    height: calc(100vh - 142px);
+    border-radius: 0;
+  }
+  .search-filters-include-services-each-section {
+    width: 100%;
+  }
+  .search-results-page-content-container {
+    padding: 0;
+  }
+  .search-results-page-content-container {
+    display: block;
+  }
+  .search-results-list {
+    width: 100%;
+  }
+  .search-results-right-section {
+    width: 100%;
+  }
+  .search-results-list-each-item {
+    display: block;
+    border: none;
+    border-radius: 0;
+    padding-top: 10px;
+  }
+  .search-results-list-each-item-left-section {
+    width: 100%;
+    padding: 10px;
+  }
+  .each-search-result-spots-section {
+    width: 100%;
+  }
+  .search-results-each-time-spot {
+    width: calc(50% - 5px);
+  }
+  #booking_workflow_main_container {
+    position: fixed;
+    background-color: #212c2c;
+    z-index: 1000;
+    top: 46px;
+    overflow-y: auto;
+    height: calc(100vh - 101px);
+    width: 100%;
+  }
+  .all_service_each_category_item {
+    height: 120px;
+    width: calc(33.3% - 3px);
+  }
+  .user-account-page-main-container {
+    display: block;
+  }
+  .user-account-page-main-sections-each {
+    width: 100%;
+  }
+  .footer-items-container {
+    display: block;
+    padding-bottom: 70px;
+  }
+  .footer-content-section {
+    width: 100%;
+  }
+  #mobile_bottom_nav {
+    display: block;
   }
 }
