--- a/public/buku_ui/src/index.css
+++ b/public/buku_ui/src/index.css
@@ -501,7 +501,10 @@ footer {
 }
 #notifications_container,
 #app_settings_page,
-#edit_user_profile_page {
+#edit_user_profile_page,
+#news_updates_page,
+#all_appointment_history,
+#photo_upload_form {
   position: fixed;
   background-color: #212c2c;
   z-index: 4;
@@ -602,7 +605,7 @@ footer {
   background-color: rgb(95, 0, 95);
   color: white;
 }
-.booking_workflow_steps_each_indicator .active{
+.booking_workflow_steps_each_indicator .active {
   transition: all 0.5s;
   border: 4px solid orange;
   color: orange;
@@ -611,12 +614,12 @@ footer {
   transition: all 0.5s;
   border-bottom: 4px solid orange;
 }
-.workflow_last_step_number{
+.workflow_last_step_number {
   border-radius: 100%;
   font-weight: bolder;
   width: 30px;
   height: 30px;
-  border: 4px solid rgba(255,255,255,0.4);
+  border: 4px solid rgba(255, 255, 255, 0.4);
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -624,7 +627,7 @@ footer {
   position: absolute;
   bottom: -15px;
   right: 0;
-  background-color: rgb(95,95,0);
+  background-color: rgb(95, 95, 0);
   color: white;
 }
 @media only screen and (max-width: 700px) {
@@ -778,4 +781,82 @@ footer {
   #mobile_bottom_nav {
     display: block;
   }
+}
+
+/*full screen page loader*/
+.loading-3 .loading {
+  background: transparent;
+  width: 2em;
+  height: 2em;
+  position: relative;
+  margin: 0 auto;
+}
+.loading-3 .loading:after {
+  display: block;
+  content: "";
+  border-radius: 50%;
+  height: 2px;
+  width: 2px;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: 10px 0 0 2px orange, 7px 7px 0 2px grey, 0 10px 0 2px grey,
+    -7px 7px 0 2px grey, -10px 0 0 2px grey, -7px -7px 0 2px grey,
+    0 -10px 0 2px orange, 7px -7px 0 2px orange;
+  -webkit-animation: rotate 0.7s steps(8) infinite;
+  -o-animation: rotate 0.7s steps(8) infinite;
+  animation: rotate 0.7s steps(8) infinite;
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/*Rating stars*/
+div.stars {
+  display: inline-block;
+}
+
+input.star {
+  display: none;
+}
+
+label.star {
+  float: right;
+  padding: 5px;
+  padding-top: 0;
+  font-size: 25px;
+  color: #444;
+  transition: all 0.2s;
+}
+
+input.star:checked ~ label.star:before {
+  content: "\f005";
+  color: #fd4;
+  transition: all 0.25s;
+}
+
+input.star-5:checked ~ label.star:before {
+  color: #fe7;
+  text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked ~ label.star:before {
+  color: #f62;
+}
+
+label.star:hover {
+  transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before {
+  content: "\f006";
+  font-family: FontAwesome;
 }
